sqlite/conformance/sqlite-sqltests/snapshots/partial_idx__partial-index-indexed-by-count-star-without-predicate-counts-table-eqp.snap
---
source: partial_idx.sqltest
expression: SELECT COUNT(*) FROM indexed_items INDEXED BY indexed_items_marker_null_idx;
info:
  statement_type: SELECT
  tables:
  - indexed_items
  setup_blocks:
  - partial_index_indexed_by_count_schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN indexed_items
