sqlite/conformance/sqlite-sqltests/snapshots/partial_idx__partial-index-indexed-by-left-join-null-rejecting-where-can-prove-after-rewrite-eqp.snap
---
source: partial_idx.sqltest
expression: |-
  SELECT COUNT(*)
      FROM left_items
      LEFT JOIN right_items INDEXED BY right_marker_five_idx ON left_items.id = right_items.id
      WHERE right_items.marker = 5;
info:
  statement_type: SELECT
  tables:
  - left_items
  - left_items.id
  - right_items
  setup_blocks:
  - partial_index_indexed_by_null_rejecting_schema
  database: ':memory:'
---
QUERY PLAN
|--SCAN left_items
`--SEARCH right_items USING COVERING INDEX right_marker_five_idx (id=?)
